Add rest of Gen 8 Pokemon

--- a/views/data/groups.ejs
+++ b/views/data/groups.ejs
@@ -20,6 +20,8 @@
 		<li><a href="/groups/gen5">Generation V</a></li>
 		<li><a href="/groups/gen6">Generation VI</a></li>
         <li><a href="/groups/gen7">Generation VII</a></li>
+		<li><a href="/groups/gen8">Generation VIII</a></li>
+		<li><a href="/groups/gen9">Generation IX</a></li>
     </ul>
     <p>Credit to <a href="/users/3032">luvianblue</a> for gathering the pokemon for the fossil and oras lists.</p>
 </div>
