Added stats for what game the Pokemon was recieved in

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -85,6 +85,7 @@
 				<li><span>Data:</span></li>
 				<li><a href="/data">Overview</a></li>
 				<li><a href="/data/pokemon">Pokemon</a></li>
+				<li><a href="/data/games">Games</a></li>
 				<li><a href="/data/regions">Regions</a></li>
 				<li><a href="/data/hiddenAbilities">Hidden<br/>Abilities</a></li>
 				<li><a href="/data/perfectIV">Perfect<br/> IV</a></li>
@@ -110,6 +111,7 @@
 					<optgroup label="Data">
 						<option value="/data">Overview</option>
 						<option value="/data/pokemon">Pokemon</option>
+						<option value="/data/games">Games</option>
 						<option value="/data/regions">Regions</option>
 						<option value="/data/hiddenAbilities">Hidden Abilities</option>
 						<option value="/data/perfectIV">Perfect IV</option>
